--- a/FernoChatAPI/appsettings.json
+++ b/FernoChatAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
-    "PrimaryConnection": "Data Source=DESKTOP-13G90JS;Initial Catalog=FernoChatApp;Integrated Security=True;",
-    "UserWarehouse": "Data Source=DESKTOP-13G90JS;Initial Catalog=MasiukOleh_PZ35_ShootingGallery_Datawarehouse;Integrated Security=True;",
+    "PrimaryConnection": "Data Source=DESKTOP-13G90JS;Initial Catalog=FernoChatApp;Integrated Security=True;TrustServerCertificate=true;",
+    "UserWarehouse": "Data Source=DESKTOP-13G90JS;Initial Catalog=MasiukOleh_PZ35_ShootingGallery_Datawarehouse;Integrated Security=True;"
   },
 
   "Logging": {
